--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,10 @@
     <script src="https://apis.google.com/js/platform.js" async></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#7fba24" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Feature Voting"
     />
     <link rel="apple-touch-icon" href="favicon.png" />
     <!--
