--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <script src="https://apis.google.com/js/platform.js" async></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#7fba24" />
+    <meta name="theme-color" content="#003c50" />
     <meta
       name="description"
       content="Feature Voting"
